--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "express-graphql": "^0.11.0",
     "graphql": "^15.4.0",
     "nodemon": "^2.0.6"
+  },
+  "devDependencies": {
+    "cors": "^2.8.5"
   }
 }
