--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
@@ -14,9 +14,8 @@
     "express": "^4.17.1",
     "express-graphql": "^0.11.0",
     "graphql": "^15.4.0",
+    "cors": "^2.8.5",
     "nodemon": "^2.0.6"
   },
-  "devDependencies": {
-    "cors": "^2.8.5"
-  }
+  
 }
